Actions
Bug #10146
closedcore_pcbe_event_coverage() is missing an else
Start date:
2018-12-19
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
External Bug:
Description
Found by smatch indentation checks.
Updated by Electric Monk over 4 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit a00b240dc61ea7ab64e3881b755fca973a531e89
commit a00b240dc61ea7ab64e3881b755fca973a531e89 Author: John Levon <john.levon@joyent.com> Date: 2019-03-14T21:23:07.000Z 10146 core_pcbe_event_coverage() is missing an else Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Gergő Doma <domag02@gmail.com> Approved by: Richard Lowe <richlowe@richlowe.net>
Actions